Taller introdución HTML

--- a/ModuloDos/a-HTML/a-HTML.html
+++ b/ModuloDos/a-HTML/a-HTML.html
@@ -21,9 +21,9 @@ head>
             <h2>Cat Lists</h2>
             <h3>Things cats love:</h3>
             <ul>
-                <li>cat nip</li>
-                <li>laser pointers</li>
-                <li>lasagna</li>
+                <li>Cat nip</li>
+                <li>Laser pointers</li>
+                <li>Lasagna</li>
             </ul>
             <figure>
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
@@ -32,9 +32,9 @@ head>
             </figure>
             <h3>Top 3 things cats hate:</h3>
             <ol>
-                <li>flea treatment</li>
-                <li>thunder</li>
-                <li>other cats</li>
+                <li>Flea treatment</li>
+                <li>Thunder</li>
+                <li>Other cats</li>
             </ol>
             <figure>
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
